@@ -40,6 +40,7 @@ The following methods have been moved from `NodeCreationTestsService` to `Diagra
 - https://github.com/eclipse-syson/syson/issues/699[#699] [general-view] Add CaseUsage and CaseDefinition in General View diagram.
 - https://github.com/eclipse-syson/syson/issues/746[#746] [syson] Update Batmobile template.
 - https://github.com/eclipse-syson/syson/issues/717[#717] [import] Handle of aliases and external references have been improved.
+- https://github.com/eclipse-syson/syson/issues/756[#756] [diagrams] Add short name in container and compartment item labels.
 
 === New features
 
